2002-05-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Change order of zombie initialisation for
	darwin port.

2002-05-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSMime.h: Make set... methods return void.
	* Source//GSMime.m: Make set... methods return void.  Also fix
	parsing to use different 'specials' for HTTP and MIME
	* Headers/gnustep/base/GSIMap.h:
	* Headers/gnustep/base/NSHashTable.h:
	* Headers/gnustep/base/NSMapTable.h:
	* Source/GSArray.m:
	* Source/GSSet.m:
	* Source/GSTcpPort.m:
	* Source/NSBundle.m:
	* Source/NSConnection.m:
	* Source/NSData.m:
	* Source/NSHashTable.m:
	* Source/NSMapTable.m:
	* Source/NSObject.m:
	* Source/NSRunLoop.m:
	Applied patches by James Knight, to improve memory efficiency and
	insertion.deletion speed to hash and map tables.  Also fixes for
	some GC problems.
	Fixed minor problem in patch, and added code to call functions to
	clean up after hash and map enumerations.  Modified cleanup function
	to clear enumerator ... for memory release on GC system.
	Rewrote enumeration code so that it maintains the characteristic
	that objects can safely be removed from maps after being enumerated
	(this feature is used in several places).
	*WARNING* This introduces a binary incompatibility in that the size
	of the map table and hash table enumeration types has grown.
	If you have binaries which use the NSEnumerateHashTable() or the
	NSEnumeratemapTable() functions, you need to rebuild them.

2002-05-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSMime.h: Tidy up and add convenience methods.
	* Source/Additions/GSMime.m: Tidy up and add convenience methods.
	Added methods to convert content between string and data for ease
	of use from java.  Added support for most character sets handled
	by GNUstep-base.  Improved ContentID generation to be both unlikely
	to recur, and to be guaranteed unique within a process.
	* Source/NSBundle.m: ([+allBundles]) Don't enumeraste if map table